# haskell

./: .chap15.hs.swp  .chap26.hs.swp  .gitignore  LICENSE  README.md  alt_parsing.hs  applicative.hs  arith4.hs  bad_monoid.hs  bench.hs  chap12.hs  chap13.hs  chap15.hs  chap16.hs  chap17.hs  chap18.hs  chap20.hs  chap21.hs  chap22.hs  chap23.hs  chap24.hs  chap25.hs  chap26-1.hs  chap26.hs  chap28.hs  chap7.hs  church.hs  cipher.hs  enum.hs  fib.hs  fraction_parser.hs  functor.hs  gadt.hs  haskell.cabal  heterogeneous_list.hs  hutton_razor.hs  interview.hs  json_marshalling.hs  language_ext.hs  learn.hs  (+15 more)
addition/: addition.cabal
geo/Geometry/: Sphere.hs
hangman/: hangman.cabal
hangman/.stack-work/ghci/c9113015/: cabal_macros.h
hangman/.stack-work/odir/: Main.hi
hangman/src/: Hangman.hs  Main.hs
hangman/tests/: tests.hs
haskellbook/: alt_parsing.hs  bt.hs  chap11.hs  chap16.hs  chap17.hs  chap23.hs  chap9.hs  data.hs  phone.hs  reader_practice.hs  scotty.hs  word_number.hs
haskellbook/learn-test/src/: LearnTest.hs
learn-test/: learn-test.cabal
learn-test/tests/: tests.hs
morse/: morse.cabal
morse/src/: Morse.hs
morse/tests/: tests.hs
project_euler/: 1.hs  3.hs
shawty/: shawty.cabal
shawty/app/: Main.hs
src/: adt.hs  alt_parsing.hs  arith2.hs  arith3broken.hs  b_tree.hs  btree.hs  chap20.hs  chap22.hs  chap25.hs  chap26.hs  chap28.hs  fraction_parser.hs  functor.hs  ini_parser.hs  interview.hs  poem_lines.hs  profile.hs  prop_test.hs  rpn.hs  strings.hs
src/addition/: Addition.hs
src/geo/Geometry/: Cube.hs  Cuboid.hs
src/hangman/src/: Main.hs
src/morse/src/: Main.hs
src/project_euler/: 2.hs
src/shawty/app/: Main.hs
src/tkhe/: chap4.hs
src/typeclass/: typeclass.hs
tkhe/: chap5.hs
typeclass/: .practise.hs.swp  practise.hs  typeclass.hs
