name:                addition
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/addition#readme
license:             BSD3
license-file:        LICENSE
author:              Jeff
maintainer:          goodboy96@live.com.my
copyright:           2019 Jeff
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules: Addition
  ghc-options: -Wall -fwarn-tabs
  build-depends: base >=4.7 && <5
               , hspec
               , QuickCheck
  hs-source-dirs: .
  default-language: Haskell2010
