name:                learn-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/learn-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

test-suite tests
  ghc-options:      -Wall -fno-warn-orphans
  type:             exitcode-stdio-1.0
  main-is:          tests.hs
  hs-source-dirs:   tests
  build-depends:    base
                  , containers
                  , QuickCheck
  default-language: Haskell2010
