name:                shawty
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/shawty#readme
license:             BSD3
license-file:        LICENSE
author:              Jeff
maintainer:          goodboy96@live.com.my
copyright:           2019 Jeff
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable shawty
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
